fixing side nav colour issues on smaller screensizes, as well as renaming title

--- a/css/styles.css
+++ b/css/styles.css
@@ -10870,7 +10870,9 @@ p.lead {
 #sideNav {
   padding-left: 1rem;
   padding-right: 1rem;
+  background-color: #13151c !important;
 }
+
 #sideNav .navbar-nav .nav-item .nav-link {
   font-weight: 800;
   letter-spacing: 0.05rem;
